# Coda

./: .env  .gitignore  Coda Full Description.docx  Coda_Description.txt  Coda_Description_UTF8.txt  README.md  design.pen  extract_docx.py  index.html  package-lock.json  package.json  tailwind.config.js  ~$da Full Description.docx
.git-rewrite/: backup-refs  commit  index  message  parse  revs
release_output/: Coda_1.0.0_x64_en-US.msi  Coda_2.1.0_x64_en-US.msi  Coda_2.1.1_x64_en-US.msi
scratch/: fix_editor.cjs  fix_imports.cjs  fix_search_import.cjs  fix_syntax.cjs  restore_file.cjs  restore_final.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archiver.rs  auth.rs  backup.rs  db.rs  lib.rs  main.rs  notifications.rs  patterns.rs  project.rs  recommendations.rs  settings.rs  snippet.rs  telemetry.rs  templates.rs  vault_maintenance.rs
src-tauri/src/recommendation_engine/: candidates.rs  linking.rs  metrics.rs  mod.rs  scoring.rs  workflow.rs
src/components/auth/: SignInPage.tsx  SignUpPage.tsx  WelcomePage.tsx
src/components/dashboard/: AnalyticsPage.tsx  ArchiveModal.tsx  ArchiveView.tsx  BackupRestorePage.tsx  BoilerplateSelector.tsx  ChangePasswordPage.tsx  CodaAI.tsx  ConfirmationModal.tsx  CreateSnippetModal.tsx  Dashboard.tsx  ExportModal.tsx  FavoritesVault.tsx  GlobalErrorModal.tsx  GlobalSearchResults.tsx  HardwareVisualization.tsx  HighlightText.tsx  ImportModal.tsx  IntelligenceDashboard.tsx  LogoutConfirmationPage.tsx  MaintenanceSettingsModal.tsx  MetadataOrchestrator.tsx  ProjectLinkingPanel.tsx  ProjectVault.tsx  RollbackConfirmModal.tsx  SettingsPage.tsx  SmartRecommendations.tsx  SnippetCard.tsx  SnippetEditor.tsx  TrashRepository.tsx  VersionInfoPage.tsx
src/components/layout/: ParallaxBackground.tsx  Sidebar.tsx
src/hooks/: useAuthSession.ts  useAutoLock.ts  useSoundEffect.ts  useTelemetry.ts
src/store/: authStore.ts  useStore.ts
src/utils/: metadataEngine.ts  searchEngine.ts  sounds.ts
